[package]
name = "microsatellites"
version = "0.1.0"
edition = "2021"
authors = ["Jan Kalfus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
itertools = "0.10.5"
num = "0.4.0"
tabled = "0.10.0"
